
    o	get() and exists() were ignoring the `mode' argument for
	variables in base.  The error message for get() now mentions
	the mode requested if not "any".  A bug in setting the NAMED
	field in do_get was fixed.

    o	Removed warning about names in persistent strings when a 
	namespace is saved.

    o	The apparently never used `method' argument to loess() did not
	work.  (PR#3332)




		CHANGES IN R VERSION 1.7.1


NEW FEATURES

    o	The help pages give appropriate references to the Blue,
	White or Green books for functions based on the descriptions
	of S functions given there. (E&OE)

    o	Function getAnywhere() can find non-exported objects, for
	namespaces or registered methods.


DEPRECATED & DEFUNCT

    o	The (unimplemented) argument 'white' of parse() is deprecated.

    o	The tkfilefind demo in the tcltk library is deprecated, since
	it never worked well, and apparently not at all with Tcl/Tk 8.4.


BUG FIXES

    o	print.table() used too much white space in some cases in 1.7.0.

    o	selectMethod() failed if `f' was a non-generic and
	optional=TRUE, and gave a confusing error message if
	optional=FALSE.

    o	pchisq(*, ncp) and qchisq(*, ncp) work in more cases for large ncp
	or quantile and give warning or error messages otherwise.

    o	str(x) now also works when x is an "externalptr" (or "weakref").

    o	rbeta(), rf(), and rt() now support infinite parameter values;
	other distributions return NaN instead of NA for such.

    o	Redefining a class is now safer if the new definition
	generates an error (previously some invalid metadata could be
	left behind).

    o	A number of errors are now caught in setClass() that
	previously either went unchecked or waited until new() to
	appear:
	- classes may not contain themselves, directly or indirectly;
	- classes appearing either as slots or as superclasses must
	  themselves be defined;
	- slot names (direct or inherited) must be unique.